# chess-lib

./: Cargo.toml  README.md
src/: fen.rs  lib.rs  models.rs  wasm.rs
src/game/: mod.rs
src/parser/: lexer.rs  mod.rs
src/test/: fen_test.rs  mod.rs  pgn_test.rs  rules_test.rs
